tests/reference/asr-test_const_list_remove-c5deb20.stderr
semantic error: Type name is not implemented yet.
 --> tests/errors/test_const_list_remove.py:7:5
  |
7 |     CONST_INTEGER_LIST.remove(1)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
